# hangman

./: .env.development  README.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: .gitignore  README.md  pyproject.toml
backend/data/: games.json
backend/src/: main.py  types.py
backend/src/config/: __init__.py  app.py
backend/src/controllers/: __init__.py  games.py  users.py  words.py
backend/src/models/: __init__.py  data_store_manager.py  games.py  user_words.py  users.py
backend/src/models/_entities/: __init__.py  base_entity.py  games.py  user_words.py  users.py
backend/src/responses/: __init__.py
backend/tests/: main.py
frontend/: .env.development  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: letterInput.tsx  scoreboard.tsx  userInput.tsx  userList.tsx  userPickWordModal.tsx  word.tsx
frontend/src/components/common/: header.tsx
frontend/src/config/: app.ts  routes.ts
frontend/src/layouts/: default.tsx
frontend/src/pages/: game.tsx  home.tsx
